[package]
name = "camgi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
anyhow = "1.0.53"
html-builder = "0.3"
yaml-rust = "0.4.5"

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

[dev-dependencies]
notify = "4.0.17"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures-util = "0.3"
futures-channel = "0.3"
tokio-stream = { version = "0.1.1", features = ["net"] }

[[example]]
name = "html-designer"
path = "tools/html-designer.rs"
