[package]
name = "camgi"
version = "0.8.0"
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/elmiko/camgi.rs"
description = "A tool for inspecting OpenShift must-gather records"
keywords = ["openshift"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
anyhow = "1.0.53"
html-builder = "0.3"
yaml-rust = "0.4.5"
tar = "0.4.38"
tempdir = "0.3.7"
flate2 = "1.0.24"
infer = "0.9.0"

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

[dev-dependencies]
notify = "4.0.17"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures-util = "0.3"
futures-channel = "0.3"
tokio-stream = { version = "0.1.1", features = ["net"] }

[[example]]
name = "html-designer"
path = "tools/html-designer.rs"
